timeslots creation on Api side in new function

--- a/RestAPIs/Web.config
+++ b/RestAPIs/Web.config
@@ -6,46 +6,46 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
     <add name="ConnectionString" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NAVEED\MSSQLSERVER2016;initial catalog=SwiftKareDB;user id=sa;password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NAVEED\MSSQLSERVER2016;initial catalog=SwiftKareDB;user id=sa;password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
 
-    <!--<add name="DefaultConnection" connectionString="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;persist security info=False;" providerName="System.Data.SqlClient" />
-    <add name="ConnectionString" connectionString="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;persist security info=False;" providerName="System.Data.SqlClient" />
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=13.91.42.71;initial catalog=SwiftKareDB;user id=sa;password=Abc@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;persist security info=False;" providerName="System.Data.SqlClient"/>
+    <add name="ConnectionString" connectionString="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;persist security info=False;" providerName="System.Data.SqlClient"/>
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=13.91.42.71;initial catalog=SwiftKareDB;user id=sa;password=Abc@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
 
   </connectionStrings>
   <appSettings>
-    <add key="owin:AutomaticAppStartup" value="true" />
-    <add key="ApplyHttpsFilter" value="false" />
-    <add key="ApplyIPsAuthorizationFilter" value="false" />
-    <add key="IsApiHelpEnabled" value="true" />
+    <add key="owin:AutomaticAppStartup" value="true"/>
+    <add key="ApplyHttpsFilter" value="false"/>
+    <add key="ApplyIPsAuthorizationFilter" value="false"/>
+    <add key="IsApiHelpEnabled" value="true"/>
     <!--<add key="ConnectionString" value="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=123456;persist security info=False;" />-->
-    <add key="ConnectionString" value="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" />
-    <add key="OauthUserName" value="abc" />
-    <add key="OauthPassword" value="ddddddddd" />
-    <add key="OauthClientId" value="abc" />
-    <add key="OauthClientSecret" value="ddddddddd" />
-    <add key="OauthAccessTokenExpireSeconds" value="3600" />
+    <add key="ConnectionString" value="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;"/>
+    <add key="OauthUserName" value="abc"/>
+    <add key="OauthPassword" value="ddddddddd"/>
+    <add key="OauthClientId" value="abc"/>
+    <add key="OauthClientSecret" value="ddddddddd"/>
+    <add key="OauthAccessTokenExpireSeconds" value="3600"/>
 
-    <add key="TokBoxApiKey" value="45760272" />
-    <add key="TokBoxSecretKey" value="fc31ef6faef18ac3b8df3fb9710aab151a78a99d" />
+    <add key="TokBoxApiKey" value="45760272"/>
+    <add key="TokBoxSecretKey" value="fc31ef6faef18ac3b8df3fb9710aab151a78a99d"/>
 
-    <add key="StripePayPublisherKey" value="pk_test_3pJs94Zr9ctReML0Jyzcxlst" />
-    <add key="StripePaySecretKey" value="sk_test_3rfO7X7ODbx5WxNj4LtTkbFG" />
+    <add key="StripePayPublisherKey" value="pk_test_3pJs94Zr9ctReML0Jyzcxlst"/>
+    <add key="StripePaySecretKey" value="sk_test_3rfO7X7ODbx5WxNj4LtTkbFG"/>
 
-    <add key="SendGridUserName" value="swiftkare_sendmail_01" />
-    <add key="SendGridPassword" value="Hw34%73Her8&amp;$" />
-    <add key="SendGridFromEmailAddress" value="support@swiftkare.com" />
-    <add key="SendGridFromName" value="Swift Kare" />
+    <add key="SendGridUserName" value="swiftkare_sendmail_01"/>
+    <add key="SendGridPassword" value="Hw34%73Her8&amp;$"/>
+    <add key="SendGridFromEmailAddress" value="support@swiftkare.com"/>
+    <add key="SendGridFromName" value="Swift Kare"/>
 
-    <add key="RescheduleLimit" value="24" />
-    <add key="AlertPartBeforeDateTime" value="Appointment on " />
-    <add key="AlertPartBeforeNewDateTime" value="is rescheduled by patient to " />
+    <add key="RescheduleLimit" value="24"/>
+    <add key="AlertPartBeforeDateTime" value="Appointment on "/>
+    <add key="AlertPartBeforeNewDateTime" value="is rescheduled by patient to "/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -56,95 +56,100 @@
       </system.Web>
   -->
   <system.web>
-    <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5.1" />
-    <httpRuntime targetFramework="4.5" />
-    <customErrors mode="Off" />
+    <authentication mode="None"/>
+    <compilation debug="true" targetFramework="4.5.1"/>
+    <httpRuntime targetFramework="4.5"/>
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <modules>
-      <remove name="FormsAuthentication" />
+      <remove name="FormsAuthentication"/>
     </modules>
     <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
+      <remove name="OPTIONSVerbHandler"/>
+      <remove name="TRACEVerbHandler"/>
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.Owin.Host.SystemWeb" publicKeyToken="31BF3856AD364E35" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
+			</dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed"/>
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0"/>
+        
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
+        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+        <parameter value="mssqllocaldb"/>
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="APISoap" />
+        <binding name="APISoap"/>
       </basicHttpBinding>
       <customBinding>
         <binding name="APISoap12">
-          <textMessageEncoding messageVersion="Soap12" />
-          <httpTransport />
+          <textMessageEncoding messageVersion="Soap12"/>
+          <httpTransport/>
         </binding>
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="http://my.staging.dosespot.com/api/11/api.asmx" binding="basicHttpBinding" bindingConfiguration="APISoap" contract="DoseSpotApi.APISoap" name="APISoap" />
-      <endpoint address="http://my.staging.dosespot.com/api/11/api.asmx" binding="customBinding" bindingConfiguration="APISoap12" contract="DoseSpotApi.APISoap" name="APISoap12" />
+      <endpoint address="http://my.staging.dosespot.com/api/11/api.asmx" binding="basicHttpBinding" bindingConfiguration="APISoap" contract="DoseSpotApi.APISoap" name="APISoap"/>
+      <endpoint address="http://my.staging.dosespot.com/api/11/api.asmx" binding="customBinding" bindingConfiguration="APISoap12" contract="DoseSpotApi.APISoap" name="APISoap12"/>
     </client>
   </system.serviceModel>
 </configuration>
