--- a/RestAPIs/packages.config
+++ b/RestAPIs/packages.config
@@ -33,5 +33,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net451" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
