--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -25,7 +25,7 @@
   <appSettings>
     <!--<add key="ApiBaseUrl" value="http://13.91.42.71:13040/" />-->
   <!--<add key="ApiBaseUrl" value="http://localhost:8079/" />-->
-       <add key="ApiBaseUrl" value="http://localhost:8079/" />
+       <add key="ApiBaseUrl" value="http://localhost:13040/" />
     <add key="ClientId" value="abc" />
     <add key="Secret" value="ddddddddd" />
     <add key="webpages:Version" value="3.0.0.0" />
@@ -66,6 +66,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime maxRequestLength="50000000" targetFramework="4.5.1" />
+    <sessionState timeout="60" />
 
   </system.web>
 
