--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -763,6 +763,7 @@
     <Content Include="Scripts\jquery\dist\jquery.min.map" />
     <Content Include="Views\Appointment\DoctorProfileView.cshtml" />
     <Content Include="Views\DoctorConsultation\PatientProfileView.cshtml" />
+    <Content Include="Views\Shared\DoctorRefillErrorCountView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
