--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -15,11 +15,11 @@
   </configSections>
   <connectionStrings>
 
-    <add name="DefaultConnection" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     
-    <!--<add name="DefaultConnection" connectionString="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;persist security info=False;" providerName="System.Data.SqlClient" />
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;persist security info=False;" providerName="System.Data.SqlClient" />
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
   </connectionStrings>
   <appSettings>
