--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -752,6 +752,7 @@
     <Content Include="Views\Appointment\DoctorProfileView.cshtml" />
     <Content Include="Views\DoctorConsultation\PatientProfileView.cshtml" />
     <Content Include="Views\Shared\DoctorRefillErrorCountView.cshtml" />
+    <Content Include="Views\Consultation\PartialDoctorReviews.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
