--- a/RestAPIs/Web.config
+++ b/RestAPIs/Web.config
@@ -9,14 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
     <add name="ConnectionString" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NAVEED\MSSQLSERVER2016;initial catalog=SwiftKareDB;user id=sa;password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NAVEED\MSSQLSERVER2016;initial catalog=SwiftKareDB;user id=sa;password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
 
-    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=SwiftKare;User Id=sk;Password=q1!w2@e3#r4$;persist security info=False;" providerName="System.Data.SqlClient"/>
+    <!--<add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=SwiftKare;User Id=sk;Password=q1!w2@e3#r4$;persist security info=False;" providerName="System.Data.SqlClient"/>
     <add name="ConnectionString" connectionString="Data Source=localhost;Initial Catalog=SwiftKare;User Id=sk;Password=q1!w2@e3#r4$;persist security info=False;" providerName="System.Data.SqlClient"/>
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=SwiftKare;user id=sk;password=q1!w2@e3#r4$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=SwiftKare;user id=sk;password=q1!w2@e3#r4$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>-->
 
   </connectionStrings>
   <appSettings>
