--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -66,7 +66,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime maxRequestLength="50000000" targetFramework="4.5.1" />
-    <sessionState timeout="60" />
+    <sessionState mode="InProc" timeout="60" />
 
   </system.web>
 
