--- a/RestAPIs/Web.config
+++ b/RestAPIs/Web.config
@@ -31,7 +31,8 @@
     <add key="OauthClientId" value="abc" />
     <add key="OauthClientSecret" value="ddddddddd" />
     <add key="OauthAccessTokenExpireSeconds" value="3600" />
-
+    <add key="certificatePath" value="C:\\pushCert\\SwiftCareDistCertificate.p12"/>
+    <add key="certificatePassword" value="123"/>
     <add key="TokBoxApiKey" value="45760272" />
     <add key="TokBoxSecretKey" value="fc31ef6faef18ac3b8df3fb9710aab151a78a99d" />
 
