base64 issye resolved

--- a/RestAPIs/Web.config
+++ b/RestAPIs/Web.config
@@ -9,14 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
     <add name="ConnectionString" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NAVEED\MSSQLSERVER2016;initial catalog=SwiftKareDB;user id=sa;password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NAVEED\MSSQLSERVER2016;initial catalog=SwiftKareDB;user id=sa;password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
 
-    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=SwiftKare;User Id=sk;Password=q1!w2@e3#r4$;persist security info=False;" providerName="System.Data.SqlClient"/>
+    <!--<add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=SwiftKare;User Id=sk;Password=q1!w2@e3#r4$;persist security info=False;" providerName="System.Data.SqlClient"/>
     <add name="ConnectionString" connectionString="Data Source=localhost;Initial Catalog=SwiftKare;User Id=sk;Password=q1!w2@e3#r4$;persist security info=False;" providerName="System.Data.SqlClient"/>
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=SwiftKare;user id=sk;password=q1!w2@e3#r4$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=SwiftKare;user id=sk;password=q1!w2@e3#r4$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>-->
 
   </connectionStrings>
   <appSettings>
@@ -24,8 +24,8 @@
     <add key="ApplyHttpsFilter" value="false" />
     <add key="ApplyIPsAuthorizationFilter" value="false" />
     <add key="IsApiHelpEnabled" value="true" />
-    <add key="ConnectionString" value="Data Source=localhost;Initial Catalog=SwiftKareDB;User Id=sa;Password=123456;persist security info=False;" />
-    <!--<add key="ConnectionString" value="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" />-->
+    <!--<add key="ConnectionString" value="Data Source=localhost;Initial Catalog=SwiftKareDB;User Id=sa;Password=123456;persist security info=False;" />-->
+    <add key="ConnectionString" value="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" />
     <add key="OauthUserName" value="abc" />
     <add key="OauthPassword" value="ddddddddd" />
     <add key="OauthClientId" value="abc" />
@@ -51,6 +51,9 @@
     <add key="RescheduleLimit" value="24" />
     <add key="AlertPartBeforeDateTime" value="Appointment on " />
     <add key="AlertPartBeforeNewDateTime" value="is rescheduled by patient to " />
+
+    <add key="profilePictureURL" value="http://localhost:11262/Pictures/" />
+    <add key="profilePictureLocation" value="F:\GitHub\SwiftKare\WebApp\Pictures\" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
