ProFile save on server

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -461,6 +461,8 @@
     <Content Include="Content\images\video_h.png" />
     <Content Include="Content\images\visa.png" />
     <Content Include="Content\images\whats-new.png" />
+    <Content Include="Content\ProfilePicture\default.png" />
+    <Content Include="Content\ProfilePicture\D_27.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
