doctor and patient signup showing Error message as text only / So resolved

--- a/RestAPIs/Web.config
+++ b/RestAPIs/Web.config
@@ -52,7 +52,7 @@
     <add key="AlertPartBeforeDateTime" value="Appointment on " />
     <add key="AlertPartBeforeNewDateTime" value="is rescheduled by patient to " />
 
-    <add key="profilePictureURL" value="https://13.64.233.80/Content/ProfilePicture/" />
+    <add key="profilePictureURL" value="http://13.64.233.80:8080/Content/ProfilePicture/" />
     <add key="profilePictureLocation" value="C:\Publish\WebApp\Content\ProfilePicture\" />
   </appSettings>
   <!--
